Asset pipeline setup for javascript
- included the comp js into the source code

- some of the libraries used have a license restriction. @mcsweenb,
please do check if we have the required licenses

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,8 +11,8 @@
   <meta name="viewport" content="width=device-width, user-scalable=no" />
 
   <%= stylesheet_link_tag :home %>
+  <%= javascript_include_tag :home %>
 
-  <script src="_/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body class="home">
   <!--[if lt IE 7]>
@@ -153,16 +153,6 @@
       <div class="clearfix"></div>
     </footer>
   </div>
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="_/js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
-  
-  <script src="_/js/vendor/jquery.minimalect.min.js"></script>
-  <script src="_/js/vendor/jquery.touchSwipe.min.js"></script>
-  <script src="_/js/vendor/jquery.carouFredSel.min.js"></script>
-  
-  
-  <script src="_/js/main.js"></script>
 
   <script>
   //	Responsive layout, resizing the items
