Registration layout for use on registration pages
- Not using the default application layout anymore

- Index page doesn't use any layout

- Registration pages use register layout

- Turned off turbolinks - no premature optimisations please

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,7 @@
         </ul>
       </nav>
       <div class="profile-link">
-        <a href="/login.html">Login</a> <b>or</b> <a href="/register1.html" class="join">Join</a>
+        <a href="/login.html">Login</a> <b>or</b> <a href="/register.html" class="join">Join</a>
       </div>
       <div class="clearfix"></div>
       
