--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,5 +10,13 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+
+ *= require normalize
+ *= require minimalect
+ *= require caroufredsel
+ *= require main
+ *= require jcarousel-skins/tango/skin.css
+ *= require jquery.Jcrop.css
+
  *= require_self
  */
