--- a/app/views/register/step1.html.erb
+++ b/app/views/register/step1.html.erb
@@ -78,7 +78,7 @@
   </section>
   
   <footer>
-    <a href="/register2.html" class="submit btn-blue">Next</a>	
+    <a href="#" class="submit btn-blue">Next</a>	
     <div class="clearfix"></div>
   </footer>
 </form>
