--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, user-scalable=no" />
 
+  <%= favicon_link_tag 'favicon.ico' %>
   <%= stylesheet_link_tag :home %>
   <%= javascript_include_tag :home %>
 
