--- a/app/views/register/step2.html.erb
+++ b/app/views/register/step2.html.erb
@@ -1,2 +1,44 @@
-<h1>Register#step2</h1>
-<p>Find me in app/views/register/step2.html.erb</p>
+<% content_for :register_breadcrumbs do %>
+<%= render :partial => "register/breadcrumbs", :locals => {step_no: 2} %>
+<% end %>
+
+<%= form_for :user, url: '/register2', html: {class: 'register_form'} do |f| %>
+<section>
+  <h2>Professional information</h2>
+  <fieldset>
+    <div class="col-wide">
+      <legend>Bio</legend> 
+      <textarea class="bio" rows="4"></textarea>
+
+      <legend>Specialties</legend>
+      <input id="tags_1" type="text" class="specialties tags" value="foo,bar,baz,roffle" >
+
+      <legend>Memberships</legend>
+      <textarea class="memberships" rows="2"></textarea>
+
+      <legend>Licensed in</legend>
+      <input type="text">
+
+      <legend>Languages</legend>
+      <input type="text">
+	
+      <div class="col1">
+	<legend>LinkedIn</legend>
+	<input type="text">
+      </div>
+      <div class="col2">
+	<legend>Twitter</legend>
+	<input type="text">
+      </div>
+    </div>    
+    </fieldset>
+  </section>
+  
+  <footer>
+    <a href="/register" class="previous btn-gray-med">Previous</a>
+    <a href="#" class="submit btn-blue">Next</a>
+    <a href="/register3" class="skip btn-gray-med">Skip this step</a>
+    <div class="clearfix"></div>
+  </footer>
+  
+<% end  %>
