--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,9 @@
       </ul>
     </nav>
     <div class="profile-link">
-      <a href="/login.html">Login</a> <b>or</b> <a href="/register1.html" class="join">Join</a>
+      <%= link_to :Login, login_url%>
+      <b>or</b> 
+      <%= link_to :Join, register_url, class: :join %>
     </div>
     <div class="clearfix"></div>    
   </header>  
