Setup memberships and specialities
- Pull in js for jQuery tagsinput
- Setup models for Membership and Speciality along with the join models
- Setup user factory to create memberships and specialities

--- a/app/views/register/step2.html.erb
+++ b/app/views/register/step2.html.erb
@@ -8,11 +8,12 @@
   <fieldset>
     <div class="col-wide">
       <legend>Bio</legend> 
-      <%#= f.text_area :bio, rows: 4 %>
-      <%#= render :partial => 'error', :locals => {attr: :bio} %>
+      <%= f.text_area :bio, rows: 4 %>
+      <%= render :partial => 'error', :locals => {attr: :bio} %>
 
       <legend>Specialties</legend>
-      <input id="tags_1" type="text" class="specialties tags" value="foo,bar,baz,roffle" >
+      <%= f.text_field :specialities, class: "specialities tags", id: :tags_1 %>
+      <%= render :partial => 'error', :locals => {attr: :bio} %>
 
       <legend>Memberships</legend>
       <textarea class="memberships" rows="2"></textarea>
