--- a/app/views/register/step2.html.erb
+++ b/app/views/register/step2.html.erb
@@ -12,25 +12,30 @@
       <%= render :partial => 'error', :locals => {attr: :bio} %>
 
       <legend>Specialties</legend>
-      <%= f.text_field :specialities, class: "specialities tags", id: :tags_1 %>
-      <%= render :partial => 'error', :locals => {attr: :bio} %>
+      <%= f.text_field :specialities, class: "specialities tags", id: :tags_1, value: as_tags_csvs(@user.specialities.to_a) %>
+      <%= render :partial => 'error', :locals => {attr: :specialities} %>
 
       <legend>Memberships</legend>
-      <textarea class="memberships" rows="2"></textarea>
+      <%= f.text_field :memberships, class: "memberships tags", id: :tags_2, value: as_tags_csvs(@user.memberships.to_a) %>
+      <%= render :partial => 'error', :locals => {attr: :memberships} %>
 
       <legend>Licensed in</legend>
-      <input type="text">
+      <%= f.text_field :licensed_in %>
+      <%= render :partial => 'error', :locals => {attr: :licensed_in} %>
 
       <legend>Languages</legend>
-      <input type="text">
+      <%= f.text_field :languages, class: "languages tags", id: :tags_2, value: as_tags_csvs(@user.languages.to_a) %>
+      <%= render :partial => 'error', :locals => {attr: :languages} %>
 	
       <div class="col1">
 	<legend>LinkedIn</legend>
-	<input type="text">
+        <%= f.text_field :linkedin_handle %>
+        <%= render :partial => 'error', :locals => {attr: :linkedin_handle} %>
       </div>
       <div class="col2">
 	<legend>Twitter</legend>
-	<input type="text">
+        <%= f.text_field :twitter_handle %>
+        <%= render :partial => 'error', :locals => {attr: :twitter_handle} %>
       </div>
     </div>    
     </fieldset>
