Registeration skip step 3

--- a/app/views/register/step3.html.erb
+++ b/app/views/register/step3.html.erb
@@ -96,9 +96,9 @@
 </section>
 
 <footer>
-  <a href="/register2.html" class="previous btn-gray-med">Previous</a>
-  <a href="/register4.html" class="submit btn-blue">Next</a>
-  <a href="/register4.html" class="skip btn-gray-med">Skip this step</a>
+  <a href="/register2" class="previous btn-gray-med">Previous</a>
+  <a href="#" class="submit btn-blue">Next</a>
+  <a href="/register4" class="skip btn-gray-med">Skip this step</a>
   <div class="clearfix"></div>
 </footer>
 <% end %>
