Use nested attributes to render forms for educations and experiences
Show validation errors for each of the nested attributes

Use jQuery to handle form repetition and setting correct array indices
to the nested params

--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -566,7 +566,7 @@ nav a:hover {
 .register section .phone input.three { width: 3em; }
 .register section span.extra-info { position: absolute; right: 2%; top: 20px; font-size: 0.9em; color: #939393; }
 .register section .add-another { border-top: 1px solid #ccc; padding: 15px 2%; }
-.register section .add-another a, .profile .add-another a { display: inline-block; background: #dadada url(<%= asset_path 'cards.png' %>) 7px -696px no-repeat; padding-left: 33px; }
+.register section .add-another a, .profile .add-another a { display: inline-block; background: #dadada url(<%= asset_path 'sprites.svg' %>) 7px -696px no-repeat; padding-left: 33px; }
 
 .register section .error { position: absolute; background: #f64a2d; display: inline-block; left: 50%; margin-left: 70px; padding: 4px 0.8em; color: white; box-shadow: 0px 1px 1px rgba(0,0,0,0.3); }
 .register section .error:before { content:""; position: absolute; right: 100%;    top: 9px; width: 0; height: 0; border-top: 8px solid transparent; border-right: 11px solid #f64a2d; border-bottom: 8px solid transparent; }
