--- a/app/views/register/step2.html.erb
+++ b/app/views/register/step2.html.erb
@@ -9,33 +9,33 @@
     <div class="col-wide">
       <legend>Bio</legend> 
       <%= f.text_area :bio, rows: 4 %>
-      <%= render :partial => 'error', :locals => {attr: :bio} %>
+      <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :bio} %>
 
       <legend>Specialties</legend>
       <%= f.text_field :specialities, class: "specialities tags", id: :specialities_tags, value: as_tags_csvs(@user.specialities.to_a) %>
-      <%= render :partial => 'error', :locals => {attr: :specialities} %>
+      <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :specialities} %>
 
       <legend>Memberships</legend>
       <%= f.text_field :memberships, class: "memberships tags", id: :memberships_tags, value: as_tags_csvs(@user.memberships.to_a) %>
-      <%= render :partial => 'error', :locals => {attr: :memberships} %>
+      <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :memberships} %>
 
       <legend>Licensed in</legend>
       <%= f.text_field :licensed_in %>
-      <%= render :partial => 'error', :locals => {attr: :licensed_in} %>
+      <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :licensed_in} %>
 
       <legend>Languages</legend>
       <%= f.text_field :languages, class: "languages tags", id: :languages_tags, value: as_tags_csvs(@user.languages.to_a) %>
-      <%= render :partial => 'error', :locals => {attr: :languages} %>
+      <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :languages} %>
 	
       <div class="col1">
 	<legend>LinkedIn</legend>
         <%= f.text_field :linkedin_handle %>
-        <%= render :partial => 'error', :locals => {attr: :linkedin_handle} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :linkedin_handle} %>
       </div>
       <div class="col2">
 	<legend>Twitter</legend>
         <%= f.text_field :twitter_handle %>
-        <%= render :partial => 'error', :locals => {attr: :twitter_handle} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :twitter_handle} %>
       </div>
     </div>    
     </fieldset>
