--- a/app/views/register/step3.html.erb
+++ b/app/views/register/step3.html.erb
@@ -9,54 +9,54 @@
     <div class="col-wide">
       <legend>Company name</legend> 
       <%= f.text_field :company_name %>
-      <%= render :partial => 'error', :locals => {attr: :comoany_name} %>
+      <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :company_name} %>
 
       <legend>Company website</legend>
       <%= f.text_field :company_website %>
-      <%= render :partial => 'error', :locals => {attr: :comoany_website} %>
+      <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :company_website} %>
 
       <legend>Your job title</legend>
       <%= f.text_field :job_title %>
-      <%= render :partial => 'error', :locals => {attr: :job_title} %>
+      <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :job_title} %>
 
       <legend>Phone number</legend>
       <div class="phone">
 	<b>1</b>
         <%= f.text_field :phone_1, maxlength: 3 %>
-        <%= render :partial => 'error', :locals => {attr: :phone_1} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :phone_1} %>
         <b>&ndash;</b>
         <%= f.text_field :phone_2, maxlength: 3 %>
-        <%= render :partial => 'error', :locals => {attr: :phone_2} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :phone_2} %>
         <b>&ndash;</b>
         <%= f.text_field :phone_3, maxlength: 4 %>
-        <%= render :partial => 'error', :locals => {attr: :phone_3} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :phone_3} %>
 	<div class="clearfix"></div>
       </div>
       
       <div class="col1">
 	<legend>Address 1</legend>
         <%= f.text_field :address_1 %>
-        <%= render :partial => 'error', :locals => {attr: :address_1} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :address_1} %>
       </div>
       <div class="col2">
 	<legend>Address 2</legend>
         <%= f.text_field :address_2 %>
-        <%= render :partial => 'error', :locals => {attr: :address_2} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :address_2} %>
       </div>
       <div class="col1">
 	<legend>City</legend>
         <%= f.text_field :city %>
-        <%= render :partial => 'error', :locals => {attr: :city} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :city} %>
       </div>
       <div class="col2-1">
 	<legend>State</legend>
         <%= f.text_field :state %>
-        <%= render :partial => 'error', :locals => {attr: :state} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :state} %>
       </div>
       <div class="col2-2">
 	<legend>Zip</legend>
         <%= f.text_field :zip %>
-        <%= render :partial => 'error', :locals => {attr: :zip} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :zip} %>
       </div>
     </div>
     
@@ -71,26 +71,26 @@
       <div class="col1">
 	<legend>Minimum hourly rate</legend>
         <%= f.text_field :min_hourly %>
-        <%= render :partial => 'error', :locals => {attr: :min_hourly} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :min_hourly} %>
       </div>
       <div class="col2">
 	<legend>Maximum hourly rate</legend>
         <%= f.text_field :max_hourly %>
-        <%= render :partial => 'error', :locals => {attr: :max_hourly} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :max_hourly} %>
       </div>
       <div class="col1">
 	<legend>Minimum daily rate</legend>
         <%= f.text_field :min_daily %>
-        <%= render :partial => 'error', :locals => {attr: :min_daily} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :min_daily} %>
       </div>
       <div class="col2">
 	<legend>Maximum daily rate</legend>
         <%= f.text_field :max_daily %>
-        <%= render :partial => 'error', :locals => {attr: :max_daily} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :max_daily} %>
       </div>
       <legend>Other notes about fees</legend>
         <%= f.text_area :fee_notes %>
-        <%= render :partial => 'error', :locals => {attr: :fee_notes} %>
+        <%= render :partial => 'error', :locals => {errors: @user.errors, attr: :fee_notes} %>
     </div>
   </fieldset>
 </section>
