--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,7 @@
  *= require main
  *= require jcarousel-skins/tango/skin.css
  *= require jquery.Jcrop.css
+ *= require jquery.ui.datepicker
 
  *= require_self
  */
